# RealisDance

./: .gitignore  LICENSE  README.md  evaluate.py  inference.py  requirements.txt  setup.py  train.py
prepare_pose/smplerX/mesa-18.3.3/src/egl/: Makefile.am  Makefile.in  Makefile.sources  SConscript  egl-entrypoint-check  egl-symbols-check  g_egldispatchstubs.c  g_egldispatchstubs.h  meson.build
prepare_pose/smplerX/mesa-18.3.3/src/egl/drivers/dri2/: egl_dri2.c  egl_dri2.h  egl_dri2_fallbacks.h  platform_android.c  platform_drm.c  platform_surfaceless.c  platform_wayland.c  platform_x11.c  platform_x11_dri3.c
prepare_pose/smplerX/mesa-18.3.3/src/egl/drivers/haiku/: egl_haiku.cpp
prepare_pose/smplerX/mesa-18.3.3/src/egl/generate/: eglFunctionList.py
prepare_pose/smplerX/mesa-18.3.3/src/egl/main/: README.txt  eglapi.c  eglapi.h  eglconfig.c  eglconfig.h  eglcontext.c  eglcontext.h  egldevice.c  egldevice.h  egldispatchstubs.c  egldisplay.c  egldisplay.h  egldriver.c  egldriver.h  eglentrypoint.h  eglglobals.c  eglglobals.h  egllog.c  eglsurface.c  eglsurface.h  egltypedefs.h
prepare_pose/smplerX/mesa-18.3.3/src/egl/wayland/wayland-drm/: Makefile.am  Makefile.in  meson.build  wayland-drm.c  wayland-drm.h
prepare_pose/smplerX/mesa-18.3.3/src/gallium/drivers/r600/: Makefile.am  Makefile.in  compute_memory_pool.c  eg_asm.c  eg_debug.c  evergreen_compute.c  evergreen_compute_internal.h  evergreen_hw_context.c  evergreen_state.c  meson.build  r600_asm.c  r600_asm.h  r600_blit.c  r600_buffer_common.c  r600_cs.h  r600_hw_context.c  r600_isa.h  r600_pipe.c  r600_pipe.h  r600_pipe_common.c  r600_pipe_common.h  r600_query.c  r600_shader.c  r600_shader.h  r600_state.c  r600_state_common.c  r600_streamout.c  r600_test_dma.c  r600_texture.c  r600_viewport.c  r600d_common.h  radeon_uvd.c  radeon_vce.c  radeon_vce.h  radeon_video.c  radeon_video.h
prepare_pose/smplerX/mesa-18.3.3/src/gallium/drivers/radeonsi/: Automake.inc  Makefile.am  Makefile.in  Makefile.sources  cik_sdma.c  driinfo_radeonsi.h  meson.build  si_blit.c  si_buffer.c  si_build_pm4.h  si_clear.c  si_compute.c  si_compute.h  si_compute_blit.c  si_cp_dma.c  si_debug.c  si_descriptors.c  si_dma.c  si_dma_cs.c  si_driinfo.h  (+32 more)
prepare_pose/smplerX/mesa-18.3.3/src/gbm/: Makefile.am  Makefile.in  gbm-symbols-check  meson.build
prepare_pose/smplerX/mesa-18.3.3/src/glx/windows/: Makefile.am  Makefile.in  meson.build
prepare_pose/smplerX/mesa-18.3.3/src/intel/: Makefile.am  Makefile.compiler.am  Makefile.dev.am  Makefile.in  Makefile.isl.am  Makefile.sources  Makefile.tools.am  Makefile.vulkan.am  meson.build
prepare_pose/smplerX/mesa-18.3.3/src/intel/blorp/: blorp.c  blorp.h  blorp_blit.c  blorp_clear.c  blorp_genX_exec.h  blorp_priv.h  meson.build
prepare_pose/smplerX/mesa-18.3.3/src/intel/common/: gen_batch_decoder.c  gen_debug.c  gen_debug.h  gen_decoder.c  gen_decoder.h  gen_defines.h  gen_disasm.c  gen_disasm.h  gen_gem.h  gen_l3_config.c  gen_l3_config.h  gen_sample_positions.h  gen_urb_config.c  meson.build
prepare_pose/smplerX/mesa-18.3.3/src/intel/compiler/: brw_cfg.cpp  brw_clip_tri.c  brw_compile_clip.c  brw_compiler.c  brw_compiler.h  brw_disasm.c  brw_disasm_info.c  brw_disasm_info.h  brw_eu.c  brw_eu.h  brw_eu_compact.c  brw_eu_defines.h  brw_eu_emit.c  brw_eu_validate.c  brw_fs.cpp  brw_fs.h  brw_fs_bank_conflicts.cpp  brw_fs_builder.h  brw_fs_cmod_propagation.cpp  brw_fs_copy_propagation.cpp  brw_fs_cse.cpp  brw_fs_dead_code_eliminate.cpp  brw_fs_generator.cpp  brw_fs_live_variables.cpp  brw_fs_live_variables.h  brw_fs_lower_conversions.cpp  brw_fs_nir.cpp  brw_fs_reg_allocate.cpp  brw_fs_surface_builder.cpp  brw_fs_surface_builder.h  brw_fs_visitor.cpp  brw_inst.h  brw_ir_fs.h  brw_ir_vec4.h  brw_nir.c  brw_nir.h  brw_nir_analyze_ubo_ranges.c  brw_nir_attribute_workarounds.c  brw_nir_lower_cs_intrinsics.c  brw_nir_lower_image_load_store.c  (+33 more)
prepare_pose/smplerX/mesa-18.3.3/src/intel/dev/: gen_device_info.c  gen_device_info.h  meson.build
prepare_pose/smplerX/mesa-18.3.3/src/intel/genxml/: gen10.xml  gen10_pack.h  gen11.xml  gen11_pack.h  gen4.xml  gen45.xml  gen45_pack.h  gen4_pack.h  gen5.xml  gen5_pack.h  gen6.xml  gen6_pack.h  gen7.xml  gen75.xml  gen75_pack.h  gen7_pack.h  gen8.xml  gen8_pack.h  gen9.xml  gen9_pack.h  genX_pack.h  genX_xml.h  gen_bits_header.py  gen_macros.h  gen_pack_header.py  gen_zipped_file.py  meson.build
prepare_pose/smplerX/mesa-18.3.3/src/intel/isl/: gen_format_layout.py  isl.c  isl.h  isl_drm.c  isl_emit_depth_stencil.c  isl_format.c  isl_format_layout.c  isl_format_layout.csv  isl_gen4.c  isl_gen7.c  isl_priv.h  isl_storage_image.c  isl_surface_state.c  meson.build
prepare_pose/smplerX/mesa-18.3.3/src/intel/tools/: aub_mem.c  aub_mem.h  aub_read.c  aub_read.h  aub_write.c  aub_write.h  aubinator.c  aubinator_error_decode.c  aubinator_viewer.cpp  aubinator_viewer.h  aubinator_viewer_decoder.cpp  aubinator_viewer_urb.h  error2aub.c  gen10_context.h  gen8_context.h  gen_context.h  i965_disasm.c  intel_dump_gpu.c  intel_dump_gpu.in  intel_sanitize_gpu.c  intel_sanitize_gpu.in  meson.build
prepare_pose/smplerX/mesa-18.3.3/src/intel/vulkan/: anv_allocator.c  anv_android.c  anv_batch_chain.c  anv_blorp.c  anv_cmd_buffer.c  anv_descriptor_set.c  anv_device.c  anv_entrypoints.c  anv_entrypoints.h  anv_entrypoints_gen.py  anv_extensions.c  anv_extensions.h  anv_extensions.py  anv_extensions_gen.py  anv_formats.c  anv_gem.c  anv_gem_stubs.c  anv_genX.h  anv_icd.py  anv_image.c  anv_intel.c  anv_nir.h  anv_nir_add_base_work_group_id.c  anv_nir_apply_pipeline_layout.c  anv_nir_lower_input_attachments.c  anv_nir_lower_multiview.c  anv_nir_lower_push_constants.c  anv_nir_lower_ycbcr_textures.c  anv_pass.c  anv_pipeline.c  anv_pipeline_cache.c  anv_private.h  anv_queue.c  anv_util.c  anv_wsi.c  anv_wsi_display.c  anv_wsi_wayland.c  anv_wsi_x11.c  gen7_cmd_buffer.c  gen8_cmd_buffer.c  (+8 more)
prepare_pose/smplerX/mesa-18.3.3/src/mapi/es1api/: ABI-check  glapi_mapi_tmp.h  meson.build
prepare_pose/smplerX/mesa-18.3.3/src/mapi/shared-glapi/: SConscript  glapi_mapi_tmp.h  meson.build
(+1477 files in other folders)
